improve the myEnv

--- a/setting.ini
+++ b/setting.ini
@@ -1,6 +1,6 @@
 [common]
 ;search_file_extension=.cpp
-search_file_extension=.mk,.m,.mm,.cpp,.cxx,.c,.cc,.h,.hpp,.cs,.xaml,.css,.js,.css,.1java,.m4,.aspx,.vcxproj,.vcproj,.csproj,.sln,sources,dirs,.xml,.sh,.bat,.asm,.txt,.tcl,makefile,.reg,.py,.res,.resources,.resx,.sql,.proj,.hxx,.html,.htm,.S,.po,.vim,.java,.jsp,.ini,.sce,.sci,.tmol,.sql
+search_file_extension=.mk,.m,.mm,.cpp,.cxx,.c,.cc,.h,.hpp,.cs,.xaml,.css,.js,.css,.1java,.m4,.aspx,.vcxproj,.vcproj,.csproj,.sln,.sources,dirs,.xml,.sh,.bat,.asm,.txt,.tcl,makefile,.reg,.py,.res,.resources,.resx,.sql,.proj,.hxx,.html,.htm,.S,.po,.vim,.java,.jsp,.ini,.sce,.sci,.tmol,.sql,.proto,.idl,.dart,.yaml
 
 [crashreport]
 tempDir=/Users/ZijingWu/Downloads/temp/
